# django-template

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  mise.toml  package.json  pyproject.toml  vite.config.mjs
apps/accounts/: admin.py  apps.py  presenters.py  urls.py
apps/accounts/api/: router.py  schemas.py
apps/accounts/api/endpoints/: profile.py
apps/accounts/domain/: services.py
apps/accounts/migrations/: 0001_initial.py  0002_rename_accounts_pr_documen_e26cc9_idx_idx_profile_document_and_more.py  0003_alter_profile_birth_date.py
apps/accounts/models/: gender.py  profile.py  user.py
apps/accounts/services/: __init__.py  gravatar.py
apps/accounts/tests/domain/: test_services.py
apps/accounts/tests/unit/domain/: test_services.py
apps/core/: apps.py  presenters.py  services.py
apps/core/domain/: __init__.py
apps/core/domain/value_objects/: __init__.py  person_name.py  phone_number.py
apps/core/models/: base.py  mixins.py
apps/core/templatetags/: vite.py
apps/core/tests/unit/: test_services.py
apps/core/tests/unit/domain/: test_person_name.py  test_phone_number.py
apps/core/tests/unit/models/: test_person_name_mixin.py  test_phone_number_mixin.py
backend/apps/accounts/api/endpoints/: profile.py
backend/apps/accounts/models/: __init__.py  mixins.py  profile.py  user.py
backend/apps/core/: urls.py  validators.py
backend/apps/core/models/: __init__.py  base.py  mixin.py  mixins.py
backend/apps/core/value_objects/: person_name.py  phone_number.py
backend/config/: asgi.py  urls.py
backend/config/app_settings/: integration.py  settings.py
backend/config/settings/: base.py  development.py
backend/config/settings/parts/: auth.py  cache.py  celery.py  database.py  debug.py  django.py  env.py  i18n.py  logging.py  paths.py  project.py  static.py  storage.py  templates.py
backend/config/urls/: api.py  root.py
backend/templates/layouts/: base.html
config/: __init__.py  celery.py  wsgi.py
config/app_settings/: __init__.py  feature.py  settings.py
config/settings/: base.py  development.py  production.py  test.py
config/settings/parts/: auth.py  cache.py  celery.py  cors.py  cotton.py  database.py  debug.py  django.py  email.py  i18n.py  logging.py  paths.py  project.py  security.py  sentry.py  session.py  storage.py  templates.py
config/urls/: __init__.py  root.py  web.py
public/.well-known/appspecific/: com.chrome.devtools.json
templates/components/layouts/: app.html  guest.html
