[project]
name = "django-template"
version = "0.1.0"
description = "Base template for Django projects with Django"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0,<6.1",
    "django-allauth>=65.17",
    "django-cors-headers>=4.9",
    "django-cotton>=2.6",
    "django-debug-toolbar>=6.3",
    "django-environ>=0.13",
    "django-guid>=3.6.1",
    "django-health-check>=4.4",
    "django-ninja>=1.6",
    "django-storages>=1.14",
    "psycopg[binary]>=3.3",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.14.1",
    "sentry-sdk>=2.60",
    "whitenoise[brotli]>=6.12",
]

[dependency-groups]
dev = [
    "django-stubs[compatible-mypy]>=6.0.4",
    "factory-boy>=3.3",
    "ipython>=9.13.0",
    "mypy>=1.13,<2.1",
    "pre-commit>=4.6",
    "pytest>=9.0",
    "pytest-django>=4.12",
    "ruff>=0.15",
]

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "node_modules",
    "migrations",
    "staticfiles",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "C4",
    "ARG",
    "PIE",
    "RET",
    "RUF",
]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
known-first-party = ["apps"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
python_files = [
    "tests.py",
    "test_*.py",
    "*_tests.py",
]
addopts = [
    "--strict-markers",
    "--strict-config",
]
testpaths = [
    "tests",
    "src",
]

[tool.mypy]
python_version = "3.13"
plugins = ["mypy_django_plugin.main"]
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_subclassing_any = true
no_implicit_reexport = true
check_untyped_defs = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "*.migrations.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
disallow_untyped_defs = false

[tool.django-stubs]
django_settings_module = "config.settings.development"
